[package]
name = "atlas-divisible-state"
version = "0.1.0"
edition = "2021"
description = "Persistent KV Store state manager for Atlas"
authors = ["Amadeu Marques"]
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]

serialize_capnp = []
serialize_serde = ["serde"]

[dependencies]
serde_bytes = {version = "*", optional = true}
bincode = { version = "1.3.3" }
bytes = { version = "1.4.0",features = ["serde"] }
tokio = {version = "1.27", features = ["full"]}
log = "0.4.14"
atlas-common = { path = "../atlas-common" }
atlas-communication = { path = "../atlas-communication" }
atlas-execution = { path = "../atlas-execution" }
atlas-metrics = {path = "../atlas-metrics" }
serde = { version = "*", optional = true }


[dependencies.sled]
path = "../../sled"